--- a/CodingChallenge.Data/CodingChallenge.Data.csproj
+++ b/CodingChallenge.Data/CodingChallenge.Data.csproj
@@ -54,26 +54,19 @@
   <ItemGroup>
     <Compile Include="Classes\FormaGeometrica.cs" />
     <Compile Include="Domain\Circle.cs" />
-    <Compile Include="Domain\Enum\GeometricFormEnum.cs" />
-    <Compile Include="Domain\Enum\Language.cs" />
-    <Compile Include="Domain\GeometricForm.cs" />
+    <Compile Include="Domain\Language.cs" />
     <Compile Include="Domain\Rectangle.cs" />
+    <Compile Include="Domain\EquilateralTriangle.cs" />
     <Compile Include="Domain\Square.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\Resources.en-US.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.en-US.resx</DependentUpon>
-    </Compile>
     <Compile Include="Interfaces\IGeometricForm.cs" />
-    <Compile Include="Interfaces\ILanguage.cs" />
-    <Compile Include="Interfaces\IOperation.cs" />
     <Compile Include="Interfaces\IPrint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeneratePrint.cs" />
     <Compile Include="Services\PrintEnglish.cs" />
     <Compile Include="Services\PrintService.cs" />
     <Compile Include="Services\PrintSpanish.cs" />
@@ -91,12 +84,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.en-US.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.en-US.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.es-ES.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.es-ES.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
