--- a/CodingChallenge.Data/CodingChallenge.Data.csproj
+++ b/CodingChallenge.Data/CodingChallenge.Data.csproj
@@ -56,8 +56,14 @@
     <Compile Include="Interfaces\IGeometricForm.cs" />
     <Compile Include="Interfaces\IPrint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.pt-BR.Designer.cs">
+      <DependentUpon>Resources.pt-BR.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Services\BasePrint.cs" />
     <Compile Include="Services\PrintEnglish.cs" />
+    <Compile Include="Services\PrintPortuguese.cs" />
     <Compile Include="Services\ReportingService.cs" />
     <Compile Include="Services\PrintSpanish.cs" />
     <Compile Include="Properties\Resources.es-ES.Designer.cs">
@@ -67,6 +73,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.pt-BR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.pt-BR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
